css/style.css
/* ... */
.section_title h2 {
    text-transform: uppercase;
    text-align: center;
    position: relative;
    color: #333;
    font-size: 30px;
    font-weight: 400;
}
.section_title h2:after {
    content: "";
    position: absolute;
    bottom: -20px;
    width: 60px;
    height: 1px;
    background-color: #2196f3;
    left: 50%;
    margin-left: -30px;
}
.section_title p {
    text-align: center;
    margin-top: 45px;
    color: #333;
    font-size: 18px;
    line-height: 28px;
    font-weight: 300;
}
.parallax {
    background-attachment: fixed !important;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
}
.profile-photo {
    width: 134px;
    height: 134px;
    margin-top: 40px;
    border: 2px solid #2196f3;
    border-radius: 50%;
    padding: 3px;
}
.bright-text {
    color: #e4e4e4 !important;
}
/*---------------------------------------
   SECTION HOME              
-----------------------------------------*/
/*menu*/

.header h2 {
    height: 0px;
    margin: 0px;
}
.navbar {
    margin-top: -100px
}
.navbar-brand {
    padding: 9px 15px;
    font-weight: bold;
    font-size: 26px;
    color: white !important;
    margin-top: 10px;
}
@media(min-width:768px) {
    .navbar-default {
        background-color: transparent;
    }
    .navbar-default .navbar-nav>li>a {
        color: #FFFFFF;
        font-family: 'Raleway', sans-serif;
    }
    .navbar-default .navbar-nav>li>a:hover {
        color: #2196f3;
    }
    .navbar-default .navbar-nav>li>a:focus {
        color: #FFFFFF;
    }
    .navbar-default {
        -webkit-transition: all 1s;
        -moz-transition: all 1s;
        -o-transition: all 1s;
        transition: all 1s;
        z-index: 110;
    }
    .navbar-brand img {
        padding-top: 25px;
        height: 45px;
        -webkit-transition: all 1s;
        -moz-transition: all 1s;
        -o-transition: all 1s;
        transition: all 1s;
    }
    .navbar-default .navbar-nav>li>a {
        -webkit-transition: all 1s;
        -moz-transition: all 1s;
        -o-transition: all 1s;
        transition: all 1s;
    }
    .navbar-nav>li>a {
        padding-top: 45px;
    }
}
.navbar-default .navbar-nav>.active>a,
.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus {
    background: transparent;
    color: #2196f3;
}
.header {
    background: url(../images/chunlin-hero-banner.png);
    background-size: cover;
	background-repeat: no-repeat;
}
.header .section_overlay {
    background-color: rgba(33, 33, 33, .75);
}
.logo{
    padding-bottom: 50px;
}
.home_text{
    text-align: left;
}

@media (max-width: 768px){
    .home_text{
        text-align: center;
    }

}
.home_text h1 {
    color: #fff;
    text-transform: uppercase;
    font-size: 35px;
    font-weight: 300;
    line-height: 45px;
    padding-top: 30px
}
.home_text p {
    color: #fff;
    font-size: 17px;
    line-height: 28px;
    margin-top: 0px;
    font-weight: 300;
}
.about-me-btn {
    margin-top: 90px;
    margin-bottom: 50px
}
.home-btn,
.home-btn:focus,
.home-btn:active,
.home-btn:visited {
    background: transparent;
    border-color: #2196f3;
    color: #2196f3;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 30px;
    padding-right: 30px;
    font-size: 19px;
    text-transform: uppercase;
    border-radius: 3px;
    -webkit-transition: all 1s;
    -moz-transition: all 1s;
    -o-transition: all 1s;
    transition: all 1s;
}
.home-btn:hover {
    background-color: #2196f3;
    color: #fff;
}
.tuor,
.tuor:focus,
tuor:active,
tuor:visited {
    color: #A9ADB0;
    margin-left: 20px;
    text-transform: uppercase;
    font-size: 19px;
    font-weight: 500;
    background: transparent;
    -webkit-transition: all 1s;
    -moz-transition: all 1s;
    -o-transition: all 1s;
    transition: all 1s;
}
.tuor:hover {
    color: #fff;
}
.tuor i {
    font-size: 20px;
    padding-left: 5px;
    color: #2196f3;
}



/*---------------------------------------
   SECTION ABOUT              
-----------------------------------------*/

.about {
    background: #F1F1F1;
}



/*---------------------------------------
   SECTION IMPORTANT AREA              
-----------------------------------------*/

.important_area {
    background: #e4e4e4;
    padding-bottom: 140px;
    padding-top: 120px;
}
.important_area_title {
    padding-bottom: 30px;
}
.important_area_title h2 {
    text-transform: uppercase;
    font-weight: 800;
    font-size: 30px;
    line-height: 37px;
    position: relative;
    margin-top: 0px;
}
.important_area_title h2:after {
    content: "";
    position: absolute;
    bottom: -12px;
    left: 0;
    width: 70px;
    background: #2196f3;
    height: 1px;
}
.important_area_title p {
    font-size: 18px;
    line-height: 28px;
    margin-top: 40px;
    color: #333;
    font-weight: 300;
}
.btn-important-area,
.btn-important-area:active,
.btn-important-area:focus,
.btn-important-area:visited {
    background: transparent;
    border: 1px solid #929292;
    color: #686868;
    border-radius: 3px;
    padding: 12px 35px;
    text-transform: uppercase;
    -webkit-transition: all 1s;
    -moz-transition: all 1s;
    -o-transition: all 1s;
    transition: all 1s;
}
.btn-important-area:hover {
    background: #2196f3;
    color: #fff;
    border: 1px solid #2196f3;
}
/*---------------------------------------
   SECTION WORK              
-----------------------------------------*/

.work {
    background-color: #e4e4e4
}
.feature_inner {
    padding-top: 30px;
    padding-bottom: 70px;
}
.right_single_feature {
    position: relative;
    padding-left: 90px;
    margin-bottom: 65px;
    margin-top: 35px;
}
.right_single_feature div {
    position: absolute;
    font-size: 40px;
    color: #2196f3;
    left: 0;
    width: 90px;
    height: 90px;
    text-align: center;
    top: -8px;
}
/* ... */

